# docker-fun

./: .gitignore  README.md  install.sh  makepico.sh  run.sh
jupyter-notebook-image/: Dockerfile  bashrc  build.sh  install.sh  login.sh  run.sh
projects/RP2040-Touch-LCD-1.28/arduino/RP2040-Touch-LCD-1.28/: RP2040-Touch-LCD-1.28.ino
projects/RP2040-Touch-LCD-1.28/c/examples/: LCD_1in28_test.c
projects/RP2040-Touch-LCD-1.28/python/: RP2040-LCD-1.28.py  RollOver.py  a.txt
projects/blink2/: blink2.c
projects/cpp-test/: GCron.cpp  GCron.h  GCronEntry.cpp  GCronEntry.h  GDefines.h  GList.cpp  GList.h  GMap.cpp  GMap.h  GObj.cpp  GObj.h  Makefile  main  main.cpp
projects/goop/: CMakeLists.txt  GDefines.h  GList.gc  GObj.c  GObj.h  Goop.cmake  Goop.gc  Goop.h  Makefile  README.md  Xyzzy.gc  Xyzzy.h  cmake_install.cmake  main  main.c
projects/gtos/: CMakeLists.txt  GConfig.c  GConfig.h  GCron.c  GCron.h  GList.c  GList.h  GMap.c  GMap.gc  GMap.h  GObj.c  GObj.h  GTimer.c  GTos.c  GTos.h  Gtos.cmake  Makefile  README.md  Template.c  Template.h  cmake_install.cmake  main  main.c  main.gc
projects/gtos/linux/: config.h
projects/gtos/pico/: GTimer.c  config.h
projects/ibookintosh/: CMakeLists.old_txt  CMakeLists.txt  Makefile  PrintVariables.cmake  main  make.sh
projects/ibookintosh/libs/: goop  gtos
projects/ibookintosh/libs/tps65/: CMakeLists.txt  Makefile  Tps65.c  Tps65.gc  Tps65.h  cmake_install.cmake
projects/ibookintosh/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
projects/ibookintosh/src/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
projects/ibookintosh/tps65/: Xyzzy.gc  Xyzzy.h
projects/oop-lite-test/: CMakeLists.txt  GCron.c  GCronEntry.h  GDefines.h  GList.c  GObj.h  GTimer.c  GTimer.h
projects/oop-lite-test/linux/: GTimer.c
projects/oop-test/: CMakeLists.txt  GCron.c  GCron.h  GCronEntry.c  GList.c  GList.h  GMap.c  GMap.h  GObj.c  GObj.h  List.c  List.h  Makefile  Node.c  Node.h  Object.c  Object.h  Template.c  Template.h  main  main.c  main.h
projects/oop-thick-test1/: GDefines.h  GList.c  GList.h  GObj.c  GObj.h  Makefile  README.md  main  main.c
projects/oop-thick-test2/: GList.c  GList.h  GObj.c  GObj.h  README.md  Template.h  main  main.c
projects/oop-thick-test3/: GCron.c  GCron.h  GList.c  GList.h  GMap.h  GObj.c  GObj.h  README.md  Template.h  main
projects/oop-thick-test4/: GCronEntry.c  GCronEntry.h  GDefines.h  GList.c  GList.h  GMap.c  GMap.h  GObj.h  Makefile  README.md  Template.h  a.c  a.h  main  main.c
projects/oop-thick-test5/: GCron.c  GCron.h  GCronEntry.c  GCronEntry.h  GDefines.h  GList.c  GList.h  GMap.c  GMap.h  GObj.c  GObj.h  GString.c  GString.h  Makefile  README.md  Template.h  main  main.c
projects/oop-virtual-test/: GCron.c  GCron.h  GCronEntry.c  GCronEntry.h  GDefines.h  GList.c  GMap.c  GObj.c  GObj.h  Makefile  Template.h  main  main.c
projects/pico-pcode/: GByteArray.c  GByteArray.gc  GByteArray.h  GPCode.c  GPCode.gc  GPCode.h  GPTask.c  GPTask.gc  GPTask.h  GPVM.c  GPVM.gc  GPVM.h  Makefile  main  main.c  main.gc  main.h  utils.gc  utils.h
projects/psil/: CMakeLists.txt  main.c  main.h  psil_memory.c  psil_memory.h
projects/psil/tests/: Makefile  psil_test  psil_test.c
projects/sleep_data/: sleep_graph.ipynb  viatom.csv
projects/sleep_data/.ipynb_checkpoints/: sleep_graph-checkpoint.ipynb
projects/tps65/: CMakeLists.txt  tps65.c
projects/tps65-i2csav/: CMakeLists.txt  README.md  TempSense.c
projects/trace-aspect-weaving/: GByteArray.c  GByteArray.c.sav  package-lock.json  package.json  trace-weave.js
rpi-pico-sdk-image/: Dockerfile  build.sh  run.sh
rpi-pico-sdk-image/scripts/: env.sh  install.sh  login.sh  picoDebug.sh
teensy-sdk-image/: Dockerfile  build.sh  install.sh  run.sh  xstart.sh
